--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -54,6 +54,18 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="{% static "images/mutualfunds.jpg" %}" alt="mutualfunds"/>
+                                        <div class="caption">
+                                            <h2>Mutual Fund Portfolio</h2>
+                                            <p>Our Mutual portfolios vary across industries.</p>
+                                            <p><a class="btn btn-primary" href="{% url 'portfolio:mutualFund_list' %}"
+                                                  role="button">View
+                                                details &raquo;</a></p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
